# master-thesis

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  Scope description.txt  compose.yaml  pyproject.toml
cloud/vast.ai/: README.md  on_startup.sh  provision_script.sh
cloud/vsc/: tuner.def  tuner_run.slurm
code/: .gitignore  README.md  data_loader.py  data_preprocess.py  llm_client.py  logger.py  model.py  prompts.py  trainer.py
code/app/: .gitignore  config.yml  main.py
code/app/api/: chat.py  keygen.py
code/app/core/: config.py
code/app/schemas/: chat_schema.py  keygen_schema.py
code/app/services/: llm.py  llm_client.py  security.py
code/benchmarking/: benchmark.py  t1_executioner.py  t1_parser.py  t2_executioner.py  t2_parser.py  t2_process.py
code/codereader_app/: codereader.yml  main.py
code/example_java_codes/: java_example_file_DS.java  java_example_file_gpt.java
code/rename_pipeline/: README.md  t3.py
code/rename_pipeline/pipeline/: codereader.yml  config.yml  eval.py  helper.py  renamer.py  stats_tracker.py  test_extractor.py  usage_tracker.py
code/trainer/: config.yml  data_preprocess.py  helper.py  main.py
code/tuner/: README.md  config.yml  convert_dataset.py  data_preprocess.py  main.py  tuner.py
code/utils/: README.md  dupe_deleter.py  utils.py
docker/: REAME.md  api.Dockerfile  benchmark.Dockerfile  codereader.Dockerfile  t1.Dockerfile  t2.Dockerfile  t3.Dockerfile  t3_eval.Dockerfile  tuner.Dockerfile  tuner_preprocess.Dockerfile
docs/: .gitignore
docs/assets/: Pipeline v1.excalidraw  Pipeline v2.excalidraw  Pipeline v3.excalidraw
docs/logs/: Arno model evaluation.md
docs/meetings/: Meeting - 29-09-2025.txt  Meeting 10-10-25.txt  Meeting 11-07.txt  Meeting 11-14.txt  Meeting 11-24.txt  Meeting 12-03.txt  Meeting 12-09.txt  Meeting 12-19.txt  Meeting 14-11.txt  Meeting 25-10-10.txt  Meeting 25-10-24.txt  Meeting 25-11-14.txt  Meeting 25-11-24.txt  Meeting 25-12-03.txt  Meeting 26-01-16.txt  Meeting 26-01-30.txt  Meeting 26-02-06.txt  Meeting 26-02-13.txt  Meeting 26-02-20.txt  Meeting 26-03-06.txt  Meeting 26-03-13.txt  Meeting 28-11.txt  Meetings 26-01-30.txt
docs/meetings/2025/: Meeting 25-07-02.txt  Meeting 25-09-12.txt  Meeting 25-12-09.txt
docs/prep/: Pipeline v1.excalidraw  model_suggestions.md  potential steps
docs/presentations/: LORE #2.pptx
requirements/: requirements_api.txt  requirements_t1.txt  requirements_t2.txt  requirements_t3.txt  requirements_tuner.txt  requirements_utils.txt
scripts/: entrypoint.sh
tools/: change_java_version.ps1
tools/java-dataset-converter-llm/: .gitignore  Cargo.toml  README.md
vsc/: README.md  build_tuner_sif.slurm  tuner.def  tuner.slurm  tuner_run.slurm
(+5 files in other folders)
