[project]
name = "id-renamer-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Liu",email = "Liujason2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peft (>=0.17.0,<0.18.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = { version = "^2.7.0", source = "pytorch-gpu" }
torchvision = { version = "^0.22.0", source = "pytorch-gpu" }
torchaudio = { version = "^2.7.0", source = "pytorch-gpu" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"
