[project]
name = "id-renamer-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Liu",email = "Liujason2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peft (>=0.17.0,<0.18.0)",
    "javalang (>=0.13.0,<0.14.0)",
    "torch (==2.7.1+cu128)",
    "torchvision (==0.22.1)",
    "torchaudio (==2.7.1+cu128)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

