[project]
name = "id-renamer-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Liu",email = "Liujason2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peft (>=0.17.0,<0.18.0)",
    "javalang (>=0.13.0,<0.14.0)",
    "torch (==2.7.1+cu128)",
    "torchvision (==0.22.1)",
    "torchaudio (==2.7.1+cu128)",
    "transformers (>=4.55.2,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "accelerate (>=1.10.0,<2.0.0)",
    "bitsandbytes (>=0.47.0,<0.48.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
